bk_ida/gccida/g2/push_array_bounds
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/c-typeck.c:5030:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v1 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/c-typeck.c:5032:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0 - spelling_base; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/c-typeck.c:5047:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v6; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_array_bounds/src/obj/c-typeck.o] Error 1
